fixed activities description alignment
added flex direction and justify-content

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,8 @@ h1{
 }
 .activity-description{
     display: flex;
+     flex-direction: row;
+    justify-content: space-around;
     width:100%;
     margin:0 auto;
     padding:50px;
